# platzky

./: .gitignore  CHANGES.md  Makefile  README.md  config-template.yml  config.yml.tpl  pyproject.toml
.github/workflows/: python-app.yml  release.yml  tests.yml  todo.yaml
platzky/: __init__.py  config.py  db_loader.py  engine.py  models.py  platzky.py  plugin_loader.py
platzky/admin/: admin.py
platzky/admin/templates/: admin.html  login.html  module.html
platzky/blog/: blog.py
platzky/db/: db.py  db_loader.py  google_json_db.py  graph_ql_db.py  json_db.py  json_file_db.py
platzky/locale/en/LC_MESSAGES/: messages.po
platzky/plugin/: plugin.py  plugin_loader.py
platzky/plugins/google-tag-manager/: entrypoint.py
platzky/plugins/redirections/: entrypoint.py
platzky/plugins/sendmail/: entrypoint.py
platzky/seo/: seo.py
platzky/static/: blog.css  styles.css
platzky/templates/: base.html  blog.html  body_meta.html  dynamic_css.html  feed.xml  head_meta.html  page.html  post.html
tests/e2e_tests/: .gitignore  config.yml  cypress.config.js  db.json  e2e_test_config.yml  e2e_test_data.json
tests/unit_tests/: fake_app.py  test_blog.py  test_config.py  test_db.py  test_db_loading.py  test_engine.py  test_models.py  test_plugin_loader.py  test_seo.py
tests/unit_tests/admin/: test_admin.py
tests/unit_tests/blog/: test_blog.py  test_formatter.py
tests/unit_tests/db/: test_db.py  test_graph_ql_db.py  test_json_db.py  test_json_file_db.py
tests/unit_tests/plugin/: fake_plugin.py  test_plugin_loader.py
tests/unit_tests/seo/: test_seo.py
(+2 files in other folders)
