[tool.poetry]
name = "platzky"
version = "0.2.3"
description = "Not only blog engine"
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "3.0.3"
PyYAML = "^6.0"
Flask-Babel = "^4.0.0"
Flask-WTF = "^1.2.1"
gql = "^3.4.0"
aiohttp = "^3.9.5"
Flask-Minify = "^0.42"
google-cloud-storage = "^2.5.0"
humanize = "^4.9.0"
pydantic = "^2.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
coverage = "^7.5.1"
pytest-cov = "^5.0.0"
freezegun = "^1.2.2"
black = "^24.4.2"
ruff = "^0.4.4"
pyright = "^1.1.364"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [
    "tests/*",
    "*/__init__.py"
    ]

[tool.coverage.report]
exclude_lines = [
    "@abstractmethod",
    "@abc.abstractmethod"
    ]
